--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ package-mode = false
 
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 selenium = "4.13.0"
+undetected-chromedriver = "^3.5.5"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
