feat: retrieve cpf information from govbr

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Create a .env file based on this example 
 
-# GOVBR
+# GOVBR LOGIN
 CPF = "your_cpf"
 PASSWORD = "your_password"
+
+# In case you are trying to retrieve your CPF from gov
+BIRTHDATE = "your_birthdate"
