--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.11"
 selenium = "4.13.0"
 undetected-chromedriver = "^3.5.5"
 python-dotenv = "^1.0.1"
+nodriver = "^0.29rc2"
 
 
 [build-system]
